--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,13 @@ set(lib_base_name modulePdfMupdf)
 
 # Set up source files
 set(SOURCES
-  Module.cpp
+  src/Module.cpp
 )
 
 set(HEADERS
-  Module.hpp
-  Interface.hpp
-  core/config.hpp
+  src/Module.hpp
+  src/Interface.hpp
+  src/core/config.hpp
 )
 
 set(SHARED_COMPILE_DEFINITIONS
@@ -135,12 +135,12 @@ if(BUILD_STATIC_LIBS)
 endif()
 
 # Post build
-if(BUILD_SHARED_LIBS)
+if(BUILD_SHARED_LIBS AND PARENT_RELEASE_DIR)
     add_custom_command(TARGET ${lib_shared_name} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/modules/")
+        COMMAND ${CMAKE_COMMAND} -E make_directory "${PARENT_RELEASE_DIR}/modules/")
     add_custom_command(TARGET ${lib_shared_name} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${lib_shared_name}> "${CMAKE_BINARY_DIR}/modules/")
-endif(BUILD_SHARED_LIBS)
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${lib_shared_name}> "${PARENT_RELEASE_DIR}/modules/")
+endif()
 
 # Installation
 if(BUILD_SHARED_LIBS)
@@ -150,7 +150,7 @@ if(BUILD_SHARED_LIBS)
     ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/modules"
     LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/modules"
   )
-endif(BUILD_SHARED_LIBS)
+endif()
 
 if(BUILD_STATIC_LIBS)
   install(TARGETS ${lib_name} EXPORT ${lib_name}_TARGETS
@@ -158,11 +158,10 @@ if(BUILD_STATIC_LIBS)
     ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/lib"
     LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/lib"
   )
-endif(BUILD_STATIC_LIBS)
+endif()
 
 install(FILES ${HEADERS}
   DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/headers"
 COMPONENT Headers)
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${lib_name}_Readme.txt" DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/doc/")
 install(FILES "${CMAKE_SOURCE_DIR}/LICENSE" DESTINATION "${CMAKE_INSTALL_PREFIX}/${BIN_NAME}/doc/" RENAME "${lib_name}_LICENSE.txt" )
